tests/golden/fixtures/regwidth-multiple-exits-err/expected.err
Error: function 'test_a' has inconsistent exit mode across reachable returns
   ╭─[ tests/golden/fixtures/regwidth-multiple-exits-err/input.k65:3:6 ]
   │
 3 │ func test_a @a16 @i16 {
   │      ───┬──  
   │         ╰──── here
   │ 
   │ Help: ensure every reachable return exits with the same @a*/@i* widths or use `call foo` at the caller
───╯
